--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,4 +1,3 @@
 {
-  "greeting": "Bienvenue dans mon application !",
-  "description": "Ceci est une description."
+  "firstRiddle": "Première énigme !"
 }
